--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,10 +59,12 @@ android {
             buildConfigField 'boolean', 'SKIP_ENCRYPTION', 'true'
         }
         sat {
-            buildConfigField 'String', 'URL_PRODUCTION', '\"https://api-stg.coyni.com/\"'
-            buildConfigField 'String', 'Referer', '\"https://members.coyni.com\"'
+//            buildConfigField 'String', 'URL_PRODUCTION', '\"https://api-stg.coyni.com/\"'
+            buildConfigField 'String', 'URL_PRODUCTION', '\"https://api-sat2.coyni.com/\"'
+//            buildConfigField 'String', 'Referer', '\"https://members.coyni.com\"'
+            buildConfigField 'String', 'Referer', '\"https://members-sat2.coyni.com/\"'
             buildConfigField 'String', 'Country_Code', '\"US\"'
-            buildConfigField 'boolean', 'SKIP_ENCRYPTION', 'true'
+            buildConfigField 'boolean', 'SKIP_ENCRYPTION', 'false'
         }
         qa {
             buildConfigField 'String', 'URL_PRODUCTION', '\"https://api-qa.coyni.com/\"'
