--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,7 +52,9 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".view.business.PayToMerchantActivity"
-            android:exported="true" />
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" />
         <activity
             android:name=".view.business.BusinessTransactionListActivity"
             android:exported="true"
