success and failed screens for refund

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,9 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".view.business.RefundTransactionSuccessActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.business.MerchantTransactionDetailsActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
@@ -619,7 +622,7 @@
             android:configChanges="uiMode"
             android:exported="true"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"/>
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" />
         <activity
             android:name=".view.business.WebViewShowFileActivity"
             android:configChanges="uiMode"
@@ -650,8 +653,6 @@
             android:exported="true"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" />
-
-
     </application>
 
 </manifest>
