--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,9 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".view.GetHelpWebViewActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.business.RefundTransactionSuccessActivity"
             android:exported="false" />
         <activity
