CV2ANDRIOD-545 Refund Transaction Details & Bug Fixes V2 Merchant

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,8 @@
         android:usesCleartextTraffic="true">
         <activity
             android:name=".view.GetHelpWebViewActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"
             android:exported="false" />
         <activity
             android:name=".view.business.RefundTransactionSuccessActivity"
