--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -420,13 +420,12 @@
             android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"
             android:windowSoftInputMode="adjustResize" >
             <intent-filter>
-                <action android:name="myownandroid.testing" />
+                <action android:name="com.myownandroid.testing" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
                 <action android:name="android.intent.action.VIEW"/>
                 <data
-                    android:scheme="https"
-                    android:host="www.coyni.com"/>
+                    android:scheme="coyni.com"/>
             </intent-filter>
         </activity>
         <activity
