--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -420,12 +420,12 @@
             android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"
             android:windowSoftInputMode="adjustResize" >
             <intent-filter>
-                <action android:name="com.myownandroid.testing" />
+<!--                <action android:name="com.myownandroid.testing" />-->
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
                 <action android:name="android.intent.action.VIEW"/>
                 <data
-                    android:scheme="coyni.com"/>
+                    android:scheme="coynitest.com"/>
             </intent-filter>
         </activity>
         <activity
