--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-android-extensions'
 }
-
+apply plugin: 'com.google.gms.google-services'
 android {
     signingConfigs {
         config {
@@ -174,5 +174,11 @@ dependencies {
 //    implementation 'com.github.delight-im:Android-AdvancedWebView:v3.2.1'
 
     implementation 'com.journeyapps:zxing-android-embedded:4.1.0'
+
+    //Firebase
+    implementation platform('com.google.firebase:firebase-bom:28.4.1')
+    implementation 'com.google.firebase:firebase-messaging'
+    implementation 'com.google.firebase:firebase-analytics'
+    //End
 
 }
